# raytracer

./: CMakeLists.txt  README.md  main.cpp
include/: vec3.hpp
src/: camera.cpp  camera.hpp  color.cpp  color.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  interval.hpp  material.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  utils.hpp  vec3.cpp  vec3.hpp
